--- a/main.html
+++ b/main.html
@@ -10,6 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	
+	 <ol>
+        <li data-ns-test="shoppingList">New laptop for work</li>
+        <li data-ns-test="shoppingList">Professional camera for photography hobby</li>
+        <li data-ns-test="shoppingList">Subscription to online courses for skill development</li>
+    </ol>
+
+
+    <ul>
+        <li data-ns-test="holidayList">laddakh, India</li>
+        <li data-ns-test="holidayList">Tokyo, Japan</li>
+        <li data-ns-test="holidayList">Machu Picchu, Peru</li>
+    </ul>
 
 </body>
 
